--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@kinde-oss/kinde-auth-react": "^4.0.4",
-    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-query": "^5.64.2",
@@ -28,7 +29,8 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "universal-cookie": "^7.2.2",
-    "use-debounce": "^10.0.4"
+    "use-debounce": "^10.0.4",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
