--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@kinde-oss/kinde-auth-react": "^4.0.4",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.11",
+    "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-query": "^5.64.2",
@@ -25,6 +27,7 @@
     "prep-pro-frontend": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-intersection-observer": "^9.15.1",
     "react-player": "^2.16.0",
     "tailwind-merge": "^2.6.0",
